# SocialMediaPythonPublisher

./: .cursorignore  .cursorindexingignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PROPOSED_CHANGES.md  Procfile  README.md  SECURITY.md  SociaMediaConfig.ini.example  coverage-current.xml  dotenv.v2.example  py_db_auth.py  py_rotator_daily.py  pyproject.toml  requirements-dev.txt  requirements.txt  runfet.sh  runtime.txt
.claude/: settings.json
.claude/commands/: check.md  fix.md  implement.md  preview.md  review.md  test.md  verify.md
.claude/rules/: architecture.md  captions-sidecars.md  docs.md  spec-workflow.md  testing.md  web-security.md
.github/: DEVELOPMENT.md  DOCUMENTATION_GUIDE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: code-quality.yml  secret-scan.yml  security-scan.yml
.specstory/history/: 2025-11-07_17-30Z-update-gitignore-for-sensitive-files.md
code_v1/: dotenv.example  py_db_auth.py  py_rotator_daily.py
configfiles/: SociaMediaConfig.ini.example  email_service.ini.example
docs/: CODE_REVIEW_REPORT.md  DESIGN_SPECIFICATIONS.md  DOCUMENTATION.md  REVIEW_SUMMARY.md  SMTP_UPDATE_SUMMARY.md  V2_SYSTEM_SPEC.md
docs/reports/: SETUP_COMPLETE.md
docs_v1/: CODE_REVIEW_REPORT.md  DESIGN_SPECIFICATIONS.md  DOCUMENTATION.md  REVIEW_SUMMARY.md  SMTP_UPDATE_SUMMARY.md
docs_v2/: AI_PROMPTS_AND_MODELS.md  ARCHITECTURAL_REVIEW.md  ARCHITECTURE.md  CONFIGURATION.md  MIGRATION_PLAN.md  NFRS.md  PREVIEW_MODE.md  README.md  REVIEW_SUMMARY.md  SPECIFICATION.md  SYSTEM_DESIGN.md  USER_FLOW.md
docs_v2/01_Overview/: README.md
docs_v2/02_Specifications/: ORCHESTRATOR_RUNTIME_CONFIG_SCHEMA_REFERENCE.md  ORCHESTRATOR_SERVICE_API_INTEGRATION_GUIDE.md  SPECIFICATION.md  USER_FLOW.md
docs_v2/03_Architecture/: ARCHITECTURE.md  SYSTEM_DESIGN.md
docs_v2/04_Security_Privacy/: SECURITY_PRIVACY.md
docs_v2/05_Configuration/: CONFIGURATION.md
docs_v2/06_NFRs/: NFRS.md
docs_v2/07_AI/: AI_PROMPTS_AND_MODELS.md
docs_v2/08_Epics/: 001_single-dyno_multi-tenant_domain-based_runtime-config.md  ARCHIVED.md  README.md
docs_v2/08_Features/: 007-cross-cutting-performance-observability.md  008-publisher-async-throughput-hygiene.md  009_feature-toggle.md  010_keep-remove-curation.md  011_heroku-hetzner-app-cloning.md  012_DOCUMENTATION_UPDATE_SUMMARY.md  012_central-config-i18n-text.md  012_i18n_activation_summary.md  INDEX.md  README.md
docs_v2/09_Reviews/: 009_feature-toggle_review.md  020_auth0_login_review.md  021_config_env_consolidation_qa_review.md  021_config_env_consolidation_review.md  022_orchestrator_schema_v2_integration_readiness_review.md  026_ai-alt-text_review.md  029_brand-voice-matching_review.md  20251122_fullreview.md  PERFORMANCE_REVIEW_2025-11.md  QUALITY_CONTROL_REVIEW_2025-12-21.md  QUALITY_METRICS.md  RANDOM_IMAGE_SELECTION_INVESTIGATION.md  REVIEW_SUMMARY.md
docs_v2/10_Testing/: CR-022-001_TEST_REPORT_2025-12-28.md  EXECUTIVE_SUMMARY.md  INTEGRATION_TEST_REPORT_2025-12-27.md  ORCHESTRATOR_INTEGRATION_TEST_REPORT_2025-12-26.md  PHASE2_PROGRESS.md  README.md  TEST_ANALYSIS_AND_PROPOSAL.md  TEST_EXECUTION_REPORT_2025-12-21.md  WARNING_FIXES_SUMMARY.md
docs_v2/roadmap/: PUB-023_handoff.md  PUB-023_storage-protocol-extraction.md  PUB-023_summary.md  PUB-024_handoff.md  PUB-024_managed-storage-adapter.md  PUB-024_summary.md  PUB-025_handoff.md  PUB-025_platform-adaptive-captions.md  PUB-025_summary.md  PUB-026_ai-alt-text.md  PUB-026_handoff.md  PUB-027_bluesky-publisher.md  PUB-028_smart-hashtag-generation.md  PUB-029_brand-voice-matching.md  PUB-029_handoff.md  PUB-029_plan.yaml  PUB-030_mastodon-fediverse-publisher.md  PUB-031_handoff.md  PUB-031_managed-storage-migration-admin-library.md  PUB-031_summary.md  PUB-032_handoff.md  PUB-032_library-list-sort-filter.md  PUB-032_summary.md  PUB-033_handoff.md  PUB-033_summary.md  PUB-033_unified-image-browser.md  PUB-034_handoff.md  PUB-034_summary.md  PUB-034_usage-metering.md  PUB-035_caption-context-intelligence.md  PUB-036_upload-queue.md  PUB-037_bulk-delete.md  PUB-038_toolbar-redesign.md  PUB-039_ai-caption-feature-flags.md  PUB-039_handoff.md  PUB-039_summary.md  PUB-040_handoff.md  PUB-040_model-lifecycle-warnings.md  PUB-040_summary.md  PUB-041_handoff.md  (+7 more)
publisher_v2/: AGENTS.md  CLAUDE.md
publisher_v2/tests/: AGENTS.md  CLAUDE.md  conftest.py  test_ai_error_paths.py  test_ai_multi_caption.py  test_ai_prompt_precedence.py  test_ai_sd_generate.py  test_ai_usage.py  test_ai_vision_analysis_telemetry.py  test_alt_text.py  test_analysis_context.py  test_app_cli.py  test_archive_with_sidecar.py  test_caption_context_intelligence.py  test_caption_feature_flags.py  test_caption_spec.py  test_captions_formatting.py  test_captions_platform_limits_static.py  test_cli_flags_select_dry.py  test_config_keep_remove.py  (+49 more)
scripts/: add_cr_folders.py  cleanup_features.py  heroku_hetzner_clone.py  migrate_features.py  refine_features.py  rename_artifacts.py  vision_token_benchmark.py
(+531 files in other folders)
