[project]
name = "social-media-python-publisher"
version = "0.1.0"
description = "Automate social media content distribution with AI-generated captions"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<4.0"
dependencies = [
    "dropbox>=11.0.0",
    "python-telegram-bot>=20.0",
    "Pillow>=8.0.0",
    "configparser>=5.0.0",
    "instagrapi>=2.0.0",
    "openai>=1.7.2",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "PyYAML>=6.0.0",
    "authlib>=1.6.5",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
]

[dependency-groups]
dev = [
    "black>=24.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-watch>=4.2.0",
    "pre-commit>=3.6.0",
    "safety>=3.2.0",
    "bandit>=1.7.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["publisher_v2/src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["publisher_v2/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark test as an asyncio test",
]
addopts = [
    "-v",
    "--tb=short",
]
